0.1-82
- improve resolution of coastline.world by a factor of 4 or so
- section.plot(): avoid a contouring error if two stations at same distance coordinate
- section.smooth(): improve handling of missing values
- read.ctd.woce(): infer water depth as max(pressure) if it's not in the header
- plot.section(): allow strings for 'which'
- plot.ctd() and plot.profile(): add 'use.smoothScatter' argument
0.1-81
- add despike()
- add range.limit()
- add unabbreviate.time()
- add support for bottom-tracking RDI ADCPs
- add support for interocean 's4' current meters
- add unwrap.angle()
- read.adv.nortek(): detect the velocity range
- add processing.log.add(), an alternative to processing.log.append()
- plot.ctd(): add more plot types (and re-use which=9 for salinity, not density)
- as.ctd(): improve flexibilty
- predict.tidem(): add 'newdata' argument
- adv.2enu() added
- adp.xyz2enu(): make it correct for heading.bias
- make.filter(): can now produce tskernel type
- improve (but temporarily limit) fill.gap
- plot.adp(): add 'use.layout' argument
- window.oce() added
- make objects remember full filename, not just local filename (issue8)
- plot.tidem(): remove argument 'plot.type', using 'which' instead
- read.pt(): add arguments from, by, and to
- fix issue 57 [read.adp.rdi() read the heading incorrectly]
- add "reiniger-ross" method to ctd.decimate()
- oce.approx() added
- topo.world dataset added
- plot.ctd(): by default, make coastlines extend to box boundaries
- reformulate sun.angle in R
- fix google-code issue 56 [plot.topo() should accept land.z=NULL]
- fix google-code issue 55 [plot.topo() could go past poles]
- fix google-code issue 54 [plot.topo() was resetting par() on exit]
- fix google-code issue 53 [interp.barnes() gives poor error msg for mismatched x and y]
- fix google-code issue 52 [plot.section() draws incorrect bottom shape]
0.1-80
- add sun.angle [not tested yet; needs R reformulation]