@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1-82
-Date: 2010-10-31
+Date: 2010-11-01
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
